--- a/main.css
+++ b/main.css
@@ -6,8 +6,9 @@
 
 .logo {
     width: 100px;
-    height: 100px;
+    height: 100%;
     background-color: red;
+    float: left;
 }
 
 .content {
@@ -16,8 +17,19 @@
 }
 
 .header {
-    width: ;
+    width: 100%;
     height: 100px;
-    background-color: purple;
 }
 
+.title {
+    height: 100%;
+    background-color: purple;
+    float: left;
+    width: 300px;
+}
+
+.footer {
+    align: center;
+    width: 100%;
+    background-color: pink;
+}
