--- a/static/main.css
+++ b/static/main.css
@@ -32,10 +32,34 @@ html,body {
 
 .content {
     width: 100%;
-    background-color: blue;
     padding-top: 10px;
     padding-bottom: 60px;
+    font-size: 17px;
 }
+
+.content h1 {
+    text-align: center;
+    font-size: 35px;
+}
+
+.content ul {
+    margin: 0;
+    padding: 0;
+    padding-left: 40px;
+    list-style-type: none;
+}
+
+.projects {
+    text-align: center;
+    border: 0;
+    margin: auto;
+}
+
+.projects td {
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
 
 .header {
     width: 100%;
@@ -59,6 +83,21 @@ html,body {
     width: 100%;
     height: 50px;
     margin-top: -50px;
-    background-color: pink;
     clear: both
+}
+
+.active {
+    color: green;
+}
+
+.frozen {
+    color: #FFA500;
+}
+
+.abadoned {
+    color: red;
+}
+
+.in_progress {
+    color: #001FFF;
 }
